--- a/webCameraHosting/templates/index.html
+++ b/webCameraHosting/templates/index.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row">
         <div>
-            <img src="{{ url_for('video_feed') }}" width="60%"> 
+            <img src="{{ url_for('raw_feed') }}" width="60%"> 
         </div>
     </div>
 </div>
