--- a/webCameraHosting/templates/root.html
+++ b/webCameraHosting/templates/root.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
-<body>
+<body style="background-color:#48d1cc">
 <div class="container">
     <div class="row">
         <div>
-            <img src="{{ url_for('raw_feed') }}" width="50%" height="50%">
-            <h3>RAW FEED</h3>
-            <img src="{{ url_for('blue_feed') }}" width="50%" height="50%"> 
-            <h3>Blue Mask</h3>
-            <img src="{{ url_for('red_feed') }}" width="50%" height="50%"> 
-            <h3>Red Mask</h3>
+            <img style="position: relative; display: inline-block; left: 50%; transform: translate(-50%);" src="{{ url_for('raw_feed') }}" width="50%" height="50%">
+            <center><h3>RAW FEED</h3></center>
+            <img style="position: relative; display: inline-block; left: 50%; transform: translate(-50%);" src="{{ url_for('blue_feed') }}" width="50%" height="50%"> 
+            <center><h3>Blue Mask</h3></center>
+            <img style="position: relative; display: inline-block; left: 50%; transform: translate(-50%);" src="{{ url_for('red_feed') }}" width="50%" height="50%"> 
+            <center><h3>Red Mask</h3></center>
         </div>
     </div>
 </div>
