Added multistream + it works

--- a/webCameraHosting/templates/root.html
+++ b/webCameraHosting/templates/root.html
@@ -10,11 +10,10 @@
     <div class="row">
         <div>
             <img style="position: relative; display: inline-block; left: 50%; transform: translate(-50%);" src="{{ url_for('raw_feed') }}" width="50%" height="50%">
-            <center><h3>RAW FEED</h3></center>
-            <img style="position: relative; display: inline-block; left: 50%; transform: translate(-50%);" src="{{ url_for('blue_feed') }}" width="50%" height="50%"> 
-            <center><h3>Blue Mask</h3></center>
-            <img style="position: relative; display: inline-block; left: 50%; transform: translate(-50%);" src="{{ url_for('red_feed') }}" width="50%" height="50%"> 
-            <center><h3>Red Mask</h3></center>
+            <center><h3>Raw Feed</h3></center>
+            <img style="position: relative; display: inline-block; left: 50%; transform: translate(-50%);" src="{{ url_for('mask_feed') }}" width="50%" height="50%"> 
+            <center><h3>Mask Feed</h3></center>
+
         </div>
     </div>
 </div>
